# sim_ai_agents

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run_local.sh
.github/: dependabot.yml
docs/: ARCHITECTURE.md  ECONOMY.md  GROUNDING.md  HANDOFF.md  LAYERS.md  LOCAL.md  NEURAL_CONTRACT.md  OBSERVATORY.md  PERSONALITY.md  PRINCIPLED_MIGRATION.md  SYSTEM.md  VERB_PRIMITIVES.md
docs/runs/: README.md
emergence/: __init__.py  actions.py  affordances.py  agent.py  api.py  chronicle.py  cli.py  development.py  drives.py  ecology.py  economy.py  environment.py  esteem.py  governance.py  grounding.py  grounding_monitor.py  grounding_stats.py  health.py  illness.py  innovation.py  library.py  market.py  memory_backend.py  metrics.py  observation.py  personality.py  personas.py  psyche.py  publicworks.py  replay.py  report.py  rumour.py  scenario.py  server.py  simulation.py  society.py  viz.py  world.py
examples/: export_demo.py  run_demo.py  run_with_drives.py  run_with_llama.py
scripts/: analyze_probe_log.py  archive_ci_run.py  benchmark.py  c1_prototype.py  control_margin.py  deposit_oracle.py  generate_probe_pairs.py  grounding_probe.py  money_matched_contingency.py  probe_regime_decodability.py  reward_ceiling.py  sync-branch.sh  teacher_agreement.py  threshold_landscape.py  train_neural_grounding.py
tests/: test_affordances.py  test_aging.py  test_agriculture.py  test_agriculture_depth.py  test_api.py  test_baseline_contract.py  test_chronicle.py  test_corruption.py  test_development.py  test_drives.py  test_ecology.py  test_ecology_depth.py  test_economy_bank.py  test_economy_bank_interest.py  test_economy_care_depth.py  test_economy_credit.py  test_economy_fiscal.py  test_economy_mvp.py  test_economy_paper_money.py  test_economy_services.py  test_economy_status_feast.py  test_environment.py  test_esteem.py  test_governance.py  test_grounding.py  test_grounding_monitor.py  test_grounding_stats.py  test_health.py  test_home_refuge.py  test_illness.py  test_inheritance.py  test_innovation.py  test_library.py  test_llm.py  test_market.py  test_mechanics.py  test_memory.py  test_money_matched_contingency.py  test_narrate.py  test_neural_brain.py  (+17 more)
(+87 files in other folders)
