[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emergence-world"
version = "0.1.0"
description = "An autonomous multi-agent town simulation that measures the society different AI brains produce over many days."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# No third-party runtime dependencies: the engine and the offline heuristic
# brain use only the Python standard library. A real-LLM brain (Llama via any
# OpenAI-compatible endpoint, or Anthropic) is included and also dependency-free
# (it speaks HTTP via urllib).
dependencies = []

# Optional: the runtime for the developmental, continually-learning brain
# (emergence.brains.neural.NeuralDevelopmentalBrain). Only torch is on PyPI, so
# that is all this extra carries. The brain itself lives in the *private* repo
# `llm_model_agi` (not on PyPI) and is installed separately from git, e.g.:
#     pip install .[neural]
#     pip install "git+https://github.com/nori1234/llm_model_agi@<ref>"
# Absent either, the neural brain degrades to the heuristic brain, so the engine
# and the offline baseline stay dependency-free.
[project.optional-dependencies]
neural = ["torch"]

[project.scripts]
emergence = "emergence.cli:main"

[tool.setuptools]
packages = ["emergence", "emergence.brains"]
